# sdk-rust

./: Cargo.toml  README.md  SECURITY.md
src/: async_client.rs  client.rs  errors.rs  lib.rs  transport.rs  types.rs  webhook.rs
src/resources/: _base.rs  alert_rules.rs  api_keys.rs  applications.rs  audit_logs.rs  bookmarks.rs  deliveries.rs  destinations.rs  dlq.rs  endpoints.rs  event_type_schemas.rs  events.rs  iterate.rs  messages.rs  meta_event_configs.rs  mod.rs  organizations.rs  outbound_deliveries.rs  outbound_dlq.rs  portal.rs  sources.rs  status.rs  stream_consumers.rs  stream_sinks.rs  streams.rs  subscriptions.rs  transformations.rs  users.rs
tests/: async_client_test.rs  client_test.rs  pagination_test.rs  transport_test.rs  types_test.rs  webhook_test.rs
