[package]
name = "hivehook"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "Official Hivehook Rust SDK"
license = "MIT"
homepage = "https://hivehook.com"
repository = "https://github.com/hivehook/sdk-rust"
documentation = "https://docs.rs/hivehook"
readme = "README.md"
keywords = ["hivehook", "webhook", "webhooks", "graphql", "sdk"]
categories = ["api-bindings", "web-programming"]
authors = ["Hivehook"]

[features]
default = ["blocking", "async"]
blocking = ["reqwest/blocking"]
async = ["dep:tokio"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
base64 = "0.22"
tokio = { version = "1", default-features = false, features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
